--- a/fr/lecture/index.html
+++ b/fr/lecture/index.html
@@ -1,11 +1,6 @@
-<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Site web personnel de Edouard Paris"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><section><div class=article-header><a href=https://edouard.paris/fr>~/edouard.paris/fr</a><a href=https://edouard.paris/fr/lecture>/lecture</a></div><div class=article-body><pre tabindex=0><code class=language-ascii data-lang=ascii></code></pre></div><hr><h2>2022</h2><p><em>La Mort immortelle</em>
-- Liu Cixin</br><em>La Forêt sombre</em>
-- Liu Cixin</br><em>Le Problème à trois corps</em>
-- Liu Cixin</br><em>Les Enfants de Dune</em>
-- Frank Herbert</br><em>Le monde caché</em>
-- Merlin Sheldrake</br><em>Au commencement était…</em>
-- David Graeber & David Wengrow</br><em>Neuromancien</em>
-- William Gibson</br></p><h2>2021</h2><p><em>Le cauchemar d'Innsmouth & autres nouvelles</em>
+<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Site web personnel de Edouard Paris"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><section><div class=article-header><a href=https://edouard.paris/fr>~/edouard.paris/fr</a><a href=https://edouard.paris/fr/lecture>/lecture</a></div><div class=article-body></div><h1>2022 --</h1><ul><li><span><time>Mar 01</time>
+</span>|
+<a href=https://edouard.paris/fr/blog/au-commencement-etait/>Lecture: Au commencement était… - D. Graeber, D. Wengrow</a></li></ul></section><footer id=footer><div class=footer-redirect>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L edouard.paris/fr/lecture/index.txt</strong></div><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></body></html>Gibson</br></p><h2>2021</h2><p><em>Le cauchemar d'Innsmouth & autres nouvelles</em>
 - Howard P. Lovecraft</br><em>Le triomphe et la chute des dinosaures</em>
 - Steve Brusatte</br><em>La ville de vapeur</em>
 - Carlos Ruiz Zafón</br><em>Le Messie de Dune</em>
