--- a/readings/index.html
+++ b/readings/index.html
@@ -7,7 +7,8 @@
 </code></pre><p>Here, I keep updated a list of book in order to keep me motivated.
 This list, started in 2017 follows no topic or particular guideline per
 year. Books are chosen by my curiosity and the recommendations of my friends.</p><p>Computer science and programming manuals are not included. I mostly
-cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div><hr><h2>2023</h2><p><em>Comte Zéro</em>
+cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div><hr><h2>2023</h2><p><em>Mona Lisa disjoncte</em>
+- William Gibson</br><em>Comte Zéro</em>
 - William Gibson</br><em>La Datcha</em>
 - Agnès Martin-Lugand</br></p><h2>2022</h2><p><em>L'Équateur d'Einstein. Nouvelles complétes 1</em>
 - Liu Cixin</br><em>Le grand roman de la physique quantique</em>
